index add redes

--- a/index.html
+++ b/index.html
@@ -28,22 +28,22 @@
                 </p>
                 <div class="presentacion__enlaces">
                     <h2 class="presentacion__enlaces__subtitulo">Accede a mis redes</h2>
-                    <a class="presentacion__enlaces__link" href="https://github.com/">
+                    <a class="presentacion__enlaces__link" href="https://github.com/JoacoCavarzan">
                         <img src="./assets/github.png">
                         Github
                     </a>
-                    <a class="presentacion__enlaces__link" href="https://linkedin.com/in/">
+                    <a class="presentacion__enlaces__link" href="https://linkedin.com/in/joaquincavarzan/">
                         <img src="./assets/linkedin.png">
                         Linkedin
                     </a>
-                    <a class="presentacion__enlaces__link" href="https://twitch.tv/">
+                    <!-- <a class="presentacion__enlaces__link" href="https://twitch.tv/">
                         <img src="./assets/twitch.png">
                         Twitch
-                    </a>
+                    </a> -->
                 </div>
                
         </section>
-            <img src="./assets/Imagen.png" alt="Foto de Ana García desarrolando un proyecto">
+            <img src="./assets/Imagen.png" alt="Foto de Joaco desarrolando un proyecto">
     </main>
     <footer class="footer">
         <p>Desarrollado por Joaquin Cavarzan</p>
