--- a/about.html
+++ b/about.html
@@ -17,25 +17,24 @@
     <main class="presentacion">
         <section class="presentacion__contenido">
             <h1 class="presentacion__contenido__titulo">Sobre mí</h1>
-                <p class="presentacion__contenido__texto">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti
-                    atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident,
-                    similique sunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga.
+                <p class="presentacion__contenido__texto">
+                    👋 ¡Hola! Soy Joaco,
+                    💻 Graduado de Ingeniería en Software y Analista de Sistemas.                    
+                    😃 Apasionado por la tecnología, Con gran capacidad de adaptación y en constante aprendizaje.
+                    🚀 Tengo experiencia en el desarrollo de aplicaciones web, y disfruto trabajar con tecnologías tanto del frontend como del backend.
+                    📈 Entusiasta de la Inteligencia Artificial y Machine Learning.
 
                 </p>
                 <p class="presentacion__contenido__texto">
-                    Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est
-                    eligendi optio cumque nihil impedit quo minus id quod maxime placeat facere possimus, omnis voluptas
-                    assumenda est, omnis dolor repellendus. Temporibus autem quibusdam et aut officiis debitis aut rerum
-                    necessitatibus saepe eveniet ut et voluptates repudiandae sint et molestiae non recusandae. Itaque earum
-                    rerum hic tenetur a sapiente delectus, ut aut reiciendis voluptatibus maiores alias consequatur aut
-                    perferendis doloribus asperiores ipsum delis forum birol parela maxime infena. Excepteur sint occaecat
+                    📣 Busco integrarme en equipos para resolver problemas a través del desarrollo de software, colaborar en proyectos y enfrentar desafíos que fomenten mi crecimiento y contribuyan al éxito de la organización. 
+                    ✨ Si buscas un profesional apasionado y comprometido con la tecnología, ¡Estoy listo para ser parte de tu equipo! ✨
                 </p>
                
         </section>
-            <img src="./assets/Imagen.png" alt="Foto de Ana García desarrolando un proyecto">
+            <img src="./assets/Imagen.png" alt="Foto de Joaco desarrolando un proyecto">
     </main>
     <footer class="footer">
-        <p>Desarrollado por Alura Latam</p>
+        <p>Desarrollado por Joaquin Cavarzan</p>
     </footer>
     
 </body>
