--- a/about.html
+++ b/about.html
@@ -31,7 +31,7 @@
                 </p>
                
         </section>
-            <img src="./assets/Imagen.png" alt="Foto de Joaco desarrolando un proyecto">
+            <img src="./assets/Imagen.png" alt="Foto de Joaco">
     </main>
     <footer class="footer">
         <p>Desarrollado por Joaquin Cavarzan</p>
