--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 </div>
                
         </section>
-            <img src="./assets/Imagen.png" alt="Foto de Joaco">
+            <img class="presentacion__imagen" src="./assets/Imagen.png" alt="Foto de Joaco">
     </main>
     <footer class="footer">
         <p>Desarrollado por Joaquin Cavarzan</p>
