--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 Eleve tu negocio digital a otro nivel 
                 <strong class="titulo-destaque">con un Ingeniero en Software de calidad!
                 </strong></h1>
-                <p class="presentacion__contenido__texto">¡Hola! Soy Joaco, Ingeniero en Software. Ayudo a pequeños
+                <p class="presentacion__contenido__texto">👋¡Hola! Soy Joaco, Ingeniero en Software. Ayudo a pequeños
                     negocios, programadores y diseñadores a llevar a cabo buenas ideas.
                     ¿Hablamos?
 
@@ -46,7 +46,7 @@
             <img class="presentacion__imagen" src="./assets/Imagen.png" alt="Foto de Joaco">
     </main>
     <footer class="footer">
-        <p>Desarrollado por Joaquin Cavarzan</p>
+        <h3 class="developer"><svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><g clip-path="url(#clip0)"><path fill-rule="evenodd" clip-rule="evenodd" d="M14.2425 3.02985C14.7783 3.1638 15.1041 3.70673 14.9701 4.24253L10.9701 20.2425C10.8362 20.7783 10.2933 21.1041 9.75746 20.9701C9.22167 20.8362 8.89591 20.2933 9.02986 19.7575L13.0299 3.75746C13.1638 3.22166 13.7067 2.8959 14.2425 3.02985ZM6.70711 6.29289C7.09763 6.68341 7.09763 7.31658 6.70711 7.7071L2.41421 12L6.70711 16.2929C7.09763 16.6834 7.09763 17.3166 6.70711 17.7071C6.31658 18.0976 5.68342 18.0976 5.29289 17.7071L0.292893 12.7071C-0.0976311 12.3166 -0.0976311 11.6834 0.292893 11.2929L5.29289 6.29289C5.68342 5.90236 6.31658 5.90236 6.70711 6.29289ZM17.2929 6.29289C17.6834 5.90236 18.3166 5.90236 18.7071 6.29289L23.7071 11.2929C24.0976 11.6834 24.0976 12.3166 23.7071 12.7071L18.7071 17.7071C18.3166 18.0976 17.6834 18.0976 17.2929 17.7071C16.9024 17.3166 16.9024 16.6834 17.2929 16.2929L21.5858 12L17.2929 7.7071C16.9024 7.31658 16.9024 6.68341 17.2929 6.29289Z" fill="#293644"></path></g><defs><clipPath id="clip0"><rect width="24" height="24" fill="white"></rect></clipPath></defs></svg> Joaquin Cavarzan </h3>
     </footer>
 </body>
 </html>
